<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/txtOtherMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:background="@drawable/other_message_bubble"
        android:elevation="5dp"
        android:maxWidth="240dp"
        android:padding="15dp"
        android:text="@string/other_message"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOtherMessageTime"
        android:text="@string/other_tme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/txtOtherMessage"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtOtherMessage" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/other_user"
        app:layout_constraintBottom_toTopOf="@+id/txtOtherMessage"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>